css/home-phone.css
@media screen and (max-width: 768px) {
    h1 {
        font-size: 42px;
    }

    h5 {
        font-size: 32px;
    }

    h6 {
        font-size: 24px;
    }

    .small {
    	font-size: 18px;
    }

    .titles {
    	padding: 1em 0em 0em 2em;
    }

    #bio-summary {
    	width: 90%;
    	padding: 4em 0em 0em 1em;
    }

    .main {
    	min-height: 0px !important;
    }

    .card {
    	width: 90%;
    	margin-top: .5em;
    	padding-top: .5em;
    }

    .link {
    	font-size: 16px;
    	margin-left: .2em;
    	margin-right: .2em;
    }
}

